Fix VLA inference: add camera_pose to mock data, fix PaliGemma repo_id, add attn_implementation for compatibility

--- a/configs/master_config.yaml
+++ b/configs/master_config.yaml
@@ -3,7 +3,7 @@
 
 # VLM Provider Selection
 vlm:
-  provider: "openvla"  # Options: openvla, paligemma, gemini, gr00t, simple_mlp (legacy)
+  provider: "paligemma"  # Options: openvla, paligemma, gemini, gr00t, simple_mlp (legacy)
   
   checkpoint:
     source: "huggingface"  # Options: huggingface, local
