--- a/notebooks/.gitignore
+++ b/notebooks/.gitignore
@@ -1,1 +1,13 @@
 .ipynb_checkpoints\n*.log\n
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+
+.vscode/
